<resources>

    <string name="app_name">校园芥子空间</string>
    <string name="apkSaveName">Proud(2.0.0)</string>
    <string name="update_title">版本升级</string>
    <string name="update_content">修复发布任务、失物招领、物品租赁模块的BUG，修复若干小BUG</string>

    <string name="unknown_error">发生未知错误!</string>
    <string name="login_status_expired">登录状态已过期</string>
    <string name="get_baseinfo_failed_user_not_exist">获取用户信息失败，用户不存在</string>
    <string name="get_baseinfo_failed">获取用户信息失败，请重新登录</string>
    <string name="get_token_failed">调用OCR失败</string>
    <string name="visitor_reminder">该功能不对游客开放，请进行注册。</string>

    <!-- 网络 -->
    <string name="network_connect_error">网络连接异常</string>
    <string name="network_connect_timeout">网络连接超时</string>
    <string name="no_route_to_host">无法连接到服务器</string>
    <string name="network_response_code_error">服务器状态码异常：</string>
    <string name="bad_network_view_tip">您的网络不给力，点击屏幕可重新加载</string>
    <string name="water_str">太. . .太强了</string>

    <!-- 导航栏 -->
    <string name="tab_item_task_text">任务查看</string>
    <string name="tab_item_lost_and_found_text">失物招领</string>
    <string name="tab_item_rental_text">物品租赁</string>

    <string name="items_null">任务列表为空</string>
    <string name="items_null_click">重试</string>

    <string name="unfold">展开</string>
    <string name="fold">收起</string>

    <string name="info">个性标签：有理想有志气的大学生。</string>
    <string name="new_task">发布任务</string>
    <string name="new_lost">发布失物招领</string>
    <string name="new_found">发布寻物启事</string>
    <string name="new_rental">发布物品租赁</string>
    <string name="setting">设置</string>
    <string name="about">关于我们</string>
    <string name="published">个人发布</string>
    <string name="edit">个人信息编辑</string>

    <string name="setting_0">编辑个人信息</string>
    <string name="setting_1">查看个人发布</string>
    <string name="setting_2">退出登录</string>

    <string name="edit_personal">编辑</string>
    <string name="delete_personal">删除</string>


    <string name="publish">发表</string>

    <!-- 标题栏标题 -->
    <string name="task_activity">发布任务</string>

    <string name="name">姓名：</string>
    <string name="name_des">真实姓名</string>
    <string name="number">学号：</string>
    <string name="number_des">真实学号</string>
    <string name="password">密码：</string>
    <string name="new_password">新密码：</string>
    <string name="password_sure">确认密码：</string>

    <string name="input_error">输入有误</string>
    <string name="password_error">密码错误</string>
    <string name="change_password_error">手机号码错误，无法修改密码</string>
    <string name="login">登录</string>
    <string name="forget">忘记密码？</string>
    <string name="register">注册</string>
    <string name="done">已领取</string>
    <string name="time">2020年4月27日08:45:12</string>
    <string name="comment_hint">评论</string>
    <string name="send">发送</string>
    <string name="position">查看位置</string>
    <string name="describe">描述信息 . . .</string>
    <string name="version">V 1.0.0</string>
    <string name="why">开发缘由：本项目为软件工程专业的课程实践</string>
    <string name="press_again_to_exit">再按一次退出%1$s</string>
    <string name="image_failed">图片上传失败</string>
    <string name="drag_map">拖动标记地点</string>

    <!--编辑个人信息-->
    <string name="nickname">昵称：</string>
    <string name="slogen">个性签名：</string>
    <string name="phone_number">手机号码：</string>
    <string name="comfir">验证码：</string>
    <string name="edit_phone">修改</string>
    <string name="sure_phone">确认</string>
    <string name="sure">确认修改</string>


</resources>
