<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/task"
            android:icon="@drawable/edit"
            android:title="@string/new_task"
            />

        <item
            android:id="@+id/lost"
            android:icon="@drawable/edit"
            android:title="@string/new_lost" />

        <item
            android:id="@+id/found"
            android:icon="@drawable/edit"
            android:title="@string/new_found" />

        <item
            android:id="@+id/rental"
            android:icon="@drawable/edit"
            android:title="@string/new_rental" />

        <item
            android:id="@+id/setting"
            android:icon="@drawable/edit"
            android:title="@string/setting"/>

        <item
            android:id="@+id/about"
            android:icon="@drawable/about"
            android:title="@string/about" />

        <item
            android:id="@+id/none"
            android:title=""
            android:visible="false"/> <!-- 此项item用于实现让其他item在选择之后不保留选中状态 -->

    </group>

</menu>