<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutActivity"
    android:orientation="vertical"
    android:background="@drawable/background"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/AppTheme.PopupOverlay"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/qmui_config_color_red"
        />

    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@mipmap/icon"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/why"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="开发团队：旗山的骄傲"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="后端：陈浩男 郑斯彬 黄晓东"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="Web端：程伟行 王肃南"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="Android端：黎家泽"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="推广：刘志勇 关敏"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="QQ反馈：782821705"
        />

</LinearLayout>