<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.horse.proud.ui.setting.EditPersonalInfoViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/ll_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/wall"
            >

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/AppTheme.PopupOverlay"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/qmui_config_color_red"
                />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background"
                android:alpha="@dimen/alpha_setting"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginHorizontal="10dp"
                >

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@mipmap/icon"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    />

                <!-- 解决焦点问题 -->
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="0dp" />

                <!--昵称-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginHorizontal="10dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:text="@string/nickname"
                        />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:inputType="text"
                        android:layout_marginLeft="10dp"
                        android:text="@={viewModel.name}"
                        tools:ignore="LabelFor" />

                </LinearLayout>

                <!--手机号码-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="10dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:text="@string/phone_number"
                        />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="45dp"
                        android:inputType="text"
                        android:layout_marginLeft="10dp"
                        android:text="@={viewModel.phone}"
                        android:enabled="false"
                        tools:ignore="LabelFor" />

                    <Button
                        android:id="@+id/edit_phone"
                        android:layout_width="45dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:text="@string/edit_phone"
                        android:textColor="@android:color/white"
                        android:textSize="15sp"
                        android:background="@drawable/bg_btn_login"
                        style="?android:attr/borderlessButtonStyle" />

                </LinearLayout>

                <!--验证码-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="10dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:text="@string/comfir"
                        android:gravity="center"
                        />

                    <me.leefeng.libverify.VerificationView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="45dp"
                        app:vTextCount="4"
                        app:vTextSize="20dp"
                        android:layout_marginHorizontal="10dp"
                        app:vCursorDrawable="@drawable/cursor_color"
                        android:id="@+id/verificationView2"/>

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/ok"
                        />

                </LinearLayout>

                <!--个性签名-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="10dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:text="@string/slogen"
                        />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:inputType="text"
                        android:layout_marginLeft="10dp"
                        android:text="@={viewModel.info}"
                        tools:ignore="LabelFor" />

                </LinearLayout>

                <Button
                    android:id="@+id/sure"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_marginTop="22dp"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/sure"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:background="@drawable/bg_btn_login"
                    style="?android:attr/borderlessButtonStyle" />

            </LinearLayout>

        </FrameLayout>

    </LinearLayout>

</layout>